--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
+    "e2e:run": "turbo run e2e:run",
+    "e2e:dev": "turbo run e2e:open",
+    "e2e:test": "turbo run e2e:test",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
