--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,20 @@ node_modules
 # testing
 coverage
 
+# database
+prisma/db.sqlite
+prisma/db.sqlite-journal
+
 # next.js
 .next/
 out/
+
+# expo
+.expo/
+dist/
+
+# production
 build
-.swc/
 
 # misc
 .DS_Store
@@ -22,12 +31,17 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
 
 # turbo
 .turbo
