--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cypress",
+  "name": "@j5h/cypress",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cd ../../apps/web && npm run start",
+    "start": "cd ../../apps/nextjs && npm run start",
     "e2e:run": "cypress run",
     "e2e:dev": "cypress open",
     "e2e:test": "start-server-and-test --expect 200 start http://0.0.0.0:3000 e2e:run"
@@ -11,6 +11,6 @@
   "dependencies": {
     "cypress": "^12.3.0",
     "start-server-and-test": "^1.15.2",
-    "web": "workspace:*"
+    "nextjs": "workspace:*"
   }
 }
