--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,8 +10,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/auth": "*",
-    "@acme/db": "*",
+    "@j5h/auth": "*",
+    "@j5h/db": "*",
     "@trpc/client": "^10.8.1",
     "@trpc/server": "^10.8.1",
     "superjson": "1.9.1",
