--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -34,6 +34,7 @@
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.1",
+    "postcss": "^8.1.0",
     "typescript": "^4.9.4"
   },
   "eslintConfig": {
