--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@j5h/db": "*",
+    "@prisma/client": "^4.8.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "next": "^13.1.1",
-    "next-auth": "^4.18.6",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
