--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 node-linker=hoisted
 public-hoist-pattern[]=*prisma*
-strict-peer-dependencies=true
+strict-peer-dependencies=false
+engine-strict=true
