--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -30,11 +30,11 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "autoprefixer": "^10.4.13",
-    "dotenv-cli": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.1",
-    "postcss": "^8.1.0",
+    "prisma": "^4.8.0",
     "typescript": "^4.9.4"
   },
   "eslintConfig": {
