--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,51 @@
 {
   "name": "@j5h/ui",
+  "private": true,
   "version": "0.0.0",
-  "license": "MIT"
+  "type": "module",
+  "scripts": {
+    "dev": "storybook dev -p 6006 --host 0.0.0.0",
+    "build": "storybook build",
+    "clean": "rm -rf .turbo node_modules"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/carousel": "^5.10.0",
+    "@mantine/core": "^5.10.0",
+    "@mantine/dates": "^5.10.0",
+    "@mantine/dropzone": "^5.10.0",
+    "@mantine/form": "^5.10.0",
+    "@mantine/hooks": "^5.10.0",
+    "@mantine/modals": "^5.10.0",
+    "@mantine/notifications": "^5.10.0",
+    "@mantine/nprogress": "^5.10.0",
+    "@mantine/prism": "^5.10.0",
+    "@mantine/spotlight": "^5.10.0",
+    "@mantine/tiptap": "^5.10.0",
+    "@tabler/icons": "^1.119.0",
+    "@tiptap/extension-link": "2.0.0-beta.209",
+    "@tiptap/react": "2.0.0-beta.209",
+    "@tiptap/starter-kit": "2.0.0-beta.209",
+    "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^7.0.0-beta.26",
+    "@storybook/addon-essentials": "^7.0.0-beta.26",
+    "@storybook/addon-interactions": "^7.0.0-beta.26",
+    "@storybook/addon-links": "^7.0.0-beta.26",
+    "@storybook/react": "^7.0.0-beta.26",
+    "@storybook/react-vite": "^7.0.0-beta.26",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "babel-loader": "^8.3.0",
+    "storybook": "^7.0.0-beta.26",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
+  }
 }
