--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,7 @@
     },
     "build": {
       "dependsOn": ["^build", "^db:generate"],
-      "outputs": [".next/**", ".expo/**", ".dist/**"]
+      "outputs": [".next/**", ".dist/**", "storybook-static/**"]
     },
     "lint": {
       "outputs": []
